--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "json-server": "^0.16.3",
     "vue": "^3.0.0"
